Hide cell cover using visibilty to avoid resize

--- a/public/app/grid_interactions.css
+++ b/public/app/grid_interactions.css
@@ -12,7 +12,7 @@ here. */
 }
 
 .wall-cell-removing > .wall-cover, .wall-cell-editing > .wall-cover {
-  display: none;
+  visibility: hidden;
 }
 
 .text-cell-adding, .text-cell-editing {
